--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "react-native": "0.56.0"
   },
   "devDependencies": {
+    "@types/react": "^16.4.7",
+    "@types/react-native": "^0.56.4",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "5.0.0",
     "detox": "^8.1.1",
     "jest": "21.2.1",
-    "react-test-renderer": "16.4.1"
+    "react-native-typescript-transformer": "^1.2.10",
+    "react-test-renderer": "16.4.1",
+    "typescript": "^3.0.1"
   },
   "jest": {
     "preset": "react-native",
