--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test-unit": "jest __tests__",
     "test-ios": "detox build --configuration ios.sim.debug && detox test --configuration ios.sim.debug"
   },
   "dependencies": {
@@ -11,19 +12,37 @@
     "react-native": "0.56.0"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.1",
     "@types/react": "^16.4.7",
     "@types/react-native": "^0.56.4",
+    "@types/react-test-renderer": "^16.0.1",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "5.0.0",
     "detox": "^8.1.1",
     "jest": "21.2.1",
+    "react-addons-test-utils": "^15.6.2",
     "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "16.4.1",
+    "ts-jest": "^23.1.2",
     "typescript": "^3.0.1"
   },
   "jest": {
     "preset": "react-native",
-    "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(js)$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testPathIgnorePatterns": [
+      "\\.snap$",
+      "<rootDir>/node_modules/"
+    ],
+    "cacheDirectory": ".jest/cache"
   },
   "detox": {
     "configurations": {
